--- a/url-analysis_maxi.ipynb
+++ b/url-analysis_maxi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "[555278 rows x 88 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "<AxesSubplot:ylabel='traffic_category'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "[77696 rows x 88 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "<AxesSubplot:ylabel='traffic_category'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,14 +987,48 @@
     "with open('url_analysis_svc.model', 'wb') as handle:\n",
     "    pickle.dump(clf, handle)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.38      0.53      7976\n",
+      "           1       0.59      0.96      0.73      7564\n",
+      "\n",
+      "    accuracy                           0.66     15540\n",
+      "   macro avg       0.75      0.67      0.63     15540\n",
+      "weighted avg       0.75      0.66      0.63     15540\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing SVC\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "with open('url_analysis_svc.model', 'rb') as handle:\n",
+    "    clf = pickle.load(handle)\n",
+    "\n",
+    "\n",
+    "pred_labels = clf.predict(x_test)\n",
+    "\n",
+    "print(classification_report(y_test, pred_labels))"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "57d7a23cbb8f9cabba7bdcf35ca100029d349447cf34e73c9a1c8fe960b839cd"
+   "hash": "304115aecada348205c7bddd9f55978692d9061bde5844ad5d19461458638047"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('working')",
+   "display_name": "Python 3.8.13 ('transfer')",
    "language": "python",
    "name": "python3"
   },
