added cell for the 32% dataset pickle data preparation

--- a/traffic_analysis_balancing_methods.ipynb
+++ b/traffic_analysis_balancing_methods.ipynb
@@ -2161,6 +2161,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Save 32% dataset for the PyTorch data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a dictiornary with the 32% dataset (test and train data)\n",
+    "pytorch_data = [x_train, x_test, y_train, y_test]\n",
+    "\n",
+    "# save/export the dictionary\n",
+    "with open(\"pytorch/resampled_32.pickle\", 'wb') as handle:\n",
+    "        pickle.dump(pytorch_data, handle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create a SVC Model with 32% resampled data"
    ]
   },
