--- a/url-analysis_maxi.ipynb
+++ b/url-analysis_maxi.ipynb
@@ -906,7 +906,7 @@
     "df\n",
     "print(df.Label.unique())\n",
     "df = pd.concat([df, benign_downsampling, background_downsampling])\n",
-    "df"
+    "df.columns"
    ]
   },
   {
