adapted pathes to the new structure

--- a/traffic-analysis_PREP_SAMPLING_SVC/traffic_analysis_balancing_methods.ipynb
+++ b/traffic-analysis_PREP_SAMPLING_SVC/traffic_analysis_balancing_methods.ipynb
@@ -1096,14 +1096,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists('svc_models/traffic_analysis_16_balance_svc.model'):\n",
+    "if not os.path.exists('../svc_models/traffic_analysis_16_balance_svc.model'):\n",
     "    clf_16_balancing = SVC(gamma='auto')\n",
     "    clf_16_balancing.fit(x_train, y_train)\n",
-    "    with open('svc_models/traffic_analysis_16_balance_svc.model', 'wb') as handle:\n",
+    "    with open('../svc_models/traffic_analysis_16_balance_svc.model', 'wb') as handle:\n",
     "        pickle.dump(clf_16_balancing, handle)"
    ]
   },
@@ -1116,28 +1116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      0.81      0.89    103497\n",
-      "           1       0.26      0.90      0.40      7559\n",
-      "\n",
-      "    accuracy                           0.82    111056\n",
-      "   macro avg       0.62      0.85      0.64    111056\n",
-      "weighted avg       0.94      0.82      0.86    111056\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load SVC Model from the previous step\n",
-    "with open('svc_models/traffic_analysis_16_balance_svc.model', 'rb') as handle:\n",
+    "with open('../svc_models/traffic_analysis_16_balance_svc.model', 'rb') as handle:\n",
     "    clf_16_balancing = pickle.load(handle)\n",
     "\n",
     "# Test the no balancing SVC Model\n",
@@ -1646,10 +1630,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists('svc_models/traffic_analysis_24_balance_svc.model'):\n",
+    "if not os.path.exists('../svc_models/traffic_analysis_24_balance_svc.model'):\n",
     "    clf_24_balancing = SVC(gamma='auto')\n",
     "    clf_24_balancing.fit(x_train, y_train)\n",
-    "    with open('svc_models/traffic_analysis_24_balance_svc.model', 'wb') as handle:\n",
+    "    with open('../svc_models/traffic_analysis_24_balance_svc.model', 'wb') as handle:\n",
     "        pickle.dump(clf_24_balancing, handle)"
    ]
   },
@@ -1683,7 +1667,7 @@
    ],
    "source": [
     "# Load SVC Model from the previous step\n",
-    "with open('svc_models/traffic_analysis_24_balance_svc.model', 'rb') as handle:\n",
+    "with open('../svc_models/traffic_analysis_24_balance_svc.model', 'rb') as handle:\n",
     "    clf_24_balancing = pickle.load(handle)\n",
     "\n",
     "# Test the no balancing SVC Model\n",
@@ -2206,11 +2190,11 @@
     "pytorch_data_traffic_category = [x_train, x_test, y_train_out_traffic_category, y_test_out_traffic_category]\n",
     "\n",
     "# save/export the dictionary\n",
-    "with open(\"pytorch/resampled_32.pickle\", 'wb') as handle:\n",
+    "with open(\"../pytorch/resampled_32.pickle\", 'wb') as handle:\n",
     "        pickle.dump(pytorch_data, handle)\n",
     "\n",
     "# save/export the dictionary\n",
-    "with open(\"pytorch/resampled_32_traffic_category.pickle\", 'wb') as handle:\n",
+    "with open(\"../pytorch/resampled_32_traffic_category.pickle\", 'wb') as handle:\n",
     "        pickle.dump(pytorch_data_traffic_category, handle)"
    ]
   },
@@ -2227,10 +2211,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists('svc_models/traffic_analysis_32_balance_svc.model'):\n",
+    "if not os.path.exists('../svc_models/traffic_analysis_32_balance_svc.model'):\n",
     "    clf_32_balancing = SVC(gamma='auto')\n",
     "    clf_32_balancing.fit(x_train, y_train)\n",
-    "    with open('svc_models/traffic_analysis_32_balance_svc.model', 'wb') as handle:\n",
+    "    with open('../svc_models/traffic_analysis_32_balance_svc.model', 'wb') as handle:\n",
     "        pickle.dump(clf_32_balancing, handle)"
    ]
   },
@@ -2263,7 +2247,7 @@
     }
    ],
    "source": [
-    "with open('svc_models/traffic_analysis_32_balance_svc.model', 'rb') as handle:\n",
+    "with open('../svc_models/traffic_analysis_32_balance_svc.model', 'rb') as handle:\n",
     "    clf_32_balancing = pickle.load(handle)\n",
     "\n",
     "# Test the no balancing SVC Model\n",
