reimplemented some changes

--- a/traffic-analysis_PREP_SAMPLING_SVC/traffic_analysis_balancing_svc.ipynb
+++ b/traffic-analysis_PREP_SAMPLING_SVC/traffic_analysis_balancing_svc.ipynb
@@ -595,6 +595,9 @@
     "print(\"Training set shape: \" + str(df_train.shape))\n",
     "print(\"Test set shape: \" + str(x_test.shape))\n",
     "\n",
+    "# Split a dataset for the traffic category analysis\n",
+    "df_train_category, x_test_category, y_train_category, y_test_category = train_test_split(df_normalized, labels['traffic_category'], test_size=0.2)\n",
+    "\n",
     "# Drop any identifier (labels) from the test dataset\n",
     "x_test = x_test.drop(columns=['traffic_category', 'Label'])"
    ]
